tests/purs/failing/ClassHeadNoVTA5.out
Error found:
in module [33mMain[0m
at tests/purs/failing/ClassHeadNoVTA5.purs:12:15 - 12:29 (line 12, column 15 - line 12, column 29)

  No type class instance was found for
  [33m                     [0m
  [33m  Main.MultiFdBidi t0[0m
  [33m                   t1[0m
  [33m                     [0m
  The instance head contains unknown type variables. Consider adding a type annotation.

while checking that type [33mforall (t28 :: Type) (t29 :: Type) (@tyNotAppearInBody :: t28) (@norThisOne :: t29). MultiFdBidi @t28 @t29 tyNotAppearInBody norThisOne => Int[0m
  is at least as general as type [33mInt[0m
while checking that expression [33museMultiFdBidi[0m
  has type [33mInt[0m
in value declaration [33mmultiFdBidi[0m

where [33mt0[0m is an unknown type
      [33mt1[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

